--- a/rent_cd.html
+++ b/rent_cd.html
@@ -1220,14 +1220,16 @@
         fillReportTable();
 
         // TODO: quick fix
-        var list = $$("mgenres").getPopup().getList();
-        list.parse(genresForSelect());
-        list = $$("mmoviemakers").getPopup().getList();
-        list.parse(moviemakersForSelect());
-        list = $$("mactors").getPopup().getList();
-        list.parse(actorsForSelect());
-        list = $$("mdirectors").getPopup().getList();
-        list.parse(directorsForSelect());
+        setTimeout( function() {
+            var list = $$("mgenres").getPopup().getList();
+            list.parse(genresForSelect());
+            list = $$("mmoviemakers").getPopup().getList();
+            list.parse(moviemakersForSelect());
+            list = $$("mactors").getPopup().getList();
+            list.parse(actorsForSelect());
+            list = $$("mdirectors").getPopup().getList();
+            list.parse(directorsForSelect());
+        } , 5000);
 
     });
 
